fix: aumenta visibilidade mobile

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body {
 
 .Roadmap,
 .CartaDeMotivacao,
-.Vagas h1{
+.Vagas h1 {
   color: rgba(0, 92, 165, 1);
 }
 
@@ -120,8 +120,53 @@ textarea {
 }
 
 @media (min-width: 1300px) {
-  body{
+  body {
     margin: 1.25rem 5rem;
+  }
+}
+
+@media (min-width: 800px) {
+
+  .Roadmap,
+  .CartaDeMotivacao,
+  .Vagas,
+  .a h1 {
+    font-size: x-large;
+  }
+
+  textarea {
+    height: 200px;
+    font-size: 40px;
+  }
+  
+  .btnVoltar {
+    height: 70px;
+    width: 200px;
+    font-size: x-large;
+    justify-content: center;
+    padding: 0;
+    border: 2px solid rgba(0, 92, 165, 1);
+  }
+
+  .btnDownload {
+    height: 70px;
+    width: 200px;
+    font-size: x-large;
+    justify-content: center;
+    padding: 0;
+  }
+
+  .btnLoading {
+    height: 70px;
+    width: 200px;
+    font-size: x-large;
+    justify-content: center;
+    padding: 0;
+  }
+
+  input {
+    height: 100px;
+    font-size: 40px;
   }
 }
 
